a link change to fix skip contrast error

--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -11,6 +11,7 @@ nav{margin-bottom: 1.875em;}
     nav a:hover{background-color: #b716c1;}
     nav a{color: #342663;}
 tr.evenrow{background-color:#ffffff}
+a{color: #1c124b}
 table, th, td {border: 0.125em solid purple;}
 .skillstable table{margin: 0 auto;}
 .skillsimage{text-align: center; flex: 1;}
